--- a/X00194620_Ca3/wwwroot/index.html
+++ b/X00194620_Ca3/wwwroot/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>X00194620_Ca3</title>
-    <base href="/CA3_SpaceXLaunches" />
+    <base href="/CA3_SpaceXLaunches/" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
